fix alignment

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ span{
 
 .container{
     position: relative;
+    width: 550px;
+    margin-top: 50px;
 }
 
 .center {
@@ -27,26 +29,22 @@ span{
 }
 
 #frame{
-    margin-top: 20px;
-    position: absolute;
-    left: 30%;
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
-.screen{
-    background-color: black;
+#screens{
     position: absolute;
+    height: 280px;
+    width: 380px;
+    top: 80px;
+    left: 85px;
+
+    background-color: black;
     overflow: scroll;
     overflow-x: hidden;
     scrollbar-color: dark;
-    
-    width: 450px;
-    height: 300px;
-    
-    padding: 50px;
-    margin: 20px;
-    
-    top: 110px;
-    left: 34%;
 }
 
 #home_screen{
@@ -58,14 +56,12 @@ span{
 }
 
 #on_off_btn{
-    font-size: 10px;
-    color: black;
     height: 20px;
     width: 25px;
     background-color: #2BC600;
     position: absolute;
-    top: 750px;
-    left: 64%;
+    top: 640px;
+    left: 420px;
 }
 
 .blinking{
